[gd_scene load_steps=5 format=3 uid="uid://oh48t145y0cc"]

[ext_resource type="Script" uid="uid://c3218ulfabjos" path="res://scripts/tree_segment.gd" id="1_j8ln4"]
[ext_resource type="Texture2D" uid="uid://c0u15g6h6u37n" path="res://sprites/tree_log_tiles.png" id="2_ctvxr"]
[ext_resource type="Texture2D" uid="uid://dnp7o1rd8vd5s" path="res://sprites/tree_breaking.png" id="3_vsuxa"]
[ext_resource type="Texture2D" uid="uid://dap3kf0usm3ou" path="res://sprites/branch.png" id="4_od62e"]

[node name="TreeSegment" type="Node2D"]
texture_filter = 1
script = ExtResource("1_j8ln4")

[node name="BranchSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(256, 12)
scale = Vector2(4, 4)
texture = ExtResource("4_od62e")

[node name="SegmentSprite" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("2_ctvxr")
hframes = 4
frame = 1

[node name="BreakingAnim" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("3_vsuxa")
hframes = 5
